build/log/idf_py_stdout_output_7938
[1/13] Linking C static library esp-idf/buttons/libbuttons.a
[2/13] Linking C static library esp-idf/uart_interface/libuart_interface.a
[3/13] Performing build step for 'bootloader'
[1/1] cd /home/onur/esp-ws/voyager_v2.2/build/bootloader/esp-idf/esptool_py && /home/onur/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/onur/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/onur/esp-ws/voyager_v2.2/build/bootloader/bootloader.bin
Bootloader binary size 0x5200 bytes. 0x2e00 bytes (36%) free.
[4/13] No install step for 'bootloader'
[5/13] Building C object esp-idf/stepper/CMakeFiles/__idf_stepper.dir/stepper.c.obj
FAILED: esp-idf/stepper/CMakeFiles/__idf_stepper.dir/stepper.c.obj 
/home/onur/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/onur/esp-ws/voyager_v2.2/build/config -I/home/onur/esp-ws/voyager_v2.2/components/stepper/include -I/home/onur/esp/esp-idf/components/newlib/platform_include -I/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/onur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/onur/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/onur/esp/esp-idf/components/freertos/esp_additions/include -I/home/onur/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/onur/esp/esp-idf/components/esp_hw_support/include -I/home/onur/esp/esp-idf/components/esp_hw_support/include/soc -I/home/onur/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/onur/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/onur/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/onur/esp/esp-idf/components/heap/include -I/home/onur/esp/esp-idf/components/log/include -I/home/onur/esp/esp-idf/components/soc/include -I/home/onur/esp/esp-idf/components/soc/esp32s3 -I/home/onur/esp/esp-idf/components/soc/esp32s3/include -I/home/onur/esp/esp-idf/components/hal/esp32s3/include -I/home/onur/esp/esp-idf/components/hal/include -I/home/onur/esp/esp-idf/components/hal/platform_port/include -I/home/onur/esp/esp-idf/components/esp_rom/include -I/home/onur/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/onur/esp/esp-idf/components/esp_rom/esp32s3 -I/home/onur/esp/esp-idf/components/esp_common/include -I/home/onur/esp/esp-idf/components/esp_system/include -I/home/onur/esp/esp-idf/components/esp_system/port/soc -I/home/onur/esp/esp-idf/components/esp_system/port/include/private -I/home/onur/esp/esp-idf/components/xtensa/include -I/home/onur/esp/esp-idf/components/xtensa/esp32s3/include -I/home/onur/esp/esp-idf/components/lwip/include -I/home/onur/esp/esp-idf/components/lwip/include/apps -I/home/onur/esp/esp-idf/components/lwip/include/apps/sntp -I/home/onur/esp/esp-idf/components/lwip/lwip/src/include -I/home/onur/esp/esp-idf/components/lwip/port/include -I/home/onur/esp/esp-idf/components/lwip/port/freertos/include -I/home/onur/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/onur/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/onur/esp/esp-idf/components/driver/include -I/home/onur/esp/esp-idf/components/driver/deprecated -I/home/onur/esp/esp-idf/components/driver/analog_comparator/include -I/home/onur/esp/esp-idf/components/driver/dac/include -I/home/onur/esp/esp-idf/components/driver/gpio/include -I/home/onur/esp/esp-idf/components/driver/gptimer/include -I/home/onur/esp/esp-idf/components/driver/i2c/include -I/home/onur/esp/esp-idf/components/driver/i2s/include -I/home/onur/esp/esp-idf/components/driver/ledc/include -I/home/onur/esp/esp-idf/components/driver/mcpwm/include -I/home/onur/esp/esp-idf/components/driver/parlio/include -I/home/onur/esp/esp-idf/components/driver/pcnt/include -I/home/onur/esp/esp-idf/components/driver/rmt/include -I/home/onur/esp/esp-idf/components/driver/sdio_slave/include -I/home/onur/esp/esp-idf/components/driver/sdmmc/include -I/home/onur/esp/esp-idf/components/driver/sigma_delta/include -I/home/onur/esp/esp-idf/components/driver/spi/include -I/home/onur/esp/esp-idf/components/driver/temperature_sensor/include -I/home/onur/esp/esp-idf/components/driver/touch_sensor/include -I/home/onur/esp/esp-idf/components/driver/twai/include -I/home/onur/esp/esp-idf/components/driver/uart/include -I/home/onur/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/onur/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/onur/esp/esp-idf/components/esp_pm/include -I/home/onur/esp/esp-idf/components/esp_ringbuf/include -I/home/onur/esp-ws/voyager_v2.2/components/intercommunication/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/onur/esp-ws/voyager_v2.2=. -fmacro-prefix-map=/home/onur/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/stepper/CMakeFiles/__idf_stepper.dir/stepper.c.obj -MF esp-idf/stepper/CMakeFiles/__idf_stepper.dir/stepper.c.obj.d -o esp-idf/stepper/CMakeFiles/__idf_stepper.dir/stepper.c.obj -c /home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c
In file included from /home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c:6:
/home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c: In function 'limit_task':
/home/onur/esp/esp-idf/components/log/include/esp_log.h:431:54: error: expected ',' or ';' before 'do'
  431 | #define ESP_LOG_LEVEL_LOCAL(level, tag, format, ...) do {               \
      |                                                      ^~
/home/onur/esp/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c:93:5: note: in expansion of macro 'ESP_LOGI'
   93 |     ESP_LOGI(TAG, "Enable step motor");
      |     ^~~~~~~~
/home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c: At top level:
/home/onur/esp-ws/voyager_v2.2/components/stepper/stepper.c:186:13: warning: 'change_gear_task' defined but not used [-Wunused-function]
  186 | static void change_gear_task(void *pvParameters) {
      |             ^~~~~~~~~~~~~~~~
[6/13] Completed 'bootloader'
[7/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/voyager_main.c.obj
In file included from /home/onur/esp-ws/voyager_v2.2/main/voyager_main.c:20:
/home/onur/esp-ws/voyager_v2.2/components/stepper/include/stepper.h:21:13: warning: 'change_gear_task' used but never defined
   21 | static void change_gear_task(void *pvParameters);
      |             ^~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
